bk_ida/gccida/c1/dbxout_type
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dbxout_type/src/dbxout.c:1516:1: error: must use 'enum' tag to refer to type 'typestatus'
typestatus status; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dbxout_type/src/dbxout.c:1517:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dbxout_type/src/dbxout.c:1520:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dbxout_type/src/dbxout.c:1538:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v36; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dbxout_type/src/dbxout.c:1552:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v50; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dbxout_type/src/dbxout.c:1587:6: error: expected expression
v8 = ::next_type_number++; 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dbxout_type/src/dbxout.c:1588:6: error: expected expression
v9 = ::next_type_number; 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dbxout_type/src/dbxout.c:1804:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v59 = ( __int64)i[2]; 
                ^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dbxout_type/src/dbxout.c:1958:10: error: use of undeclared identifier 'unk_61E84B'
fwrite( &unk_61E84B, 2uLL, 1uLL, asmfile); 
         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dbxout_type/src/dbxout.c:2022:22: error: use of undeclared identifier 'dbxout_type_anonymous_type_number'
v45 = ( unsigned int)dbxout_type_anonymous_type_number++; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dbxout_type/src/dbxout.c:2056:53: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
if ( ( *( _BYTE *)( v41 + 18) & 4) != 0 && !strcmp( lang_hooks_0.name, "GNU C++") ) 
                                                    ^~~~~~~~~~~~
                                                    lang_hooks
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dbxout_type/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dbxout_type/src/obj/dbxout.o] Error 1
